--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-fileupload": "^1.2.1",
     "express-session": "^1.17.2",
+    "local-storage": "^2.0.0",
     "mongoose": "^6.1.2",
     "nodemon": "^2.0.15"
   }
